auto update time fix